# jc-computation

./: Cargo.toml  FormalTheory.md  INDEX.md  LICENSE  PROJECT_ANALYSIS.md  QUICK_REFERENCE.md  README.md  browser-demo.html  node-demo.cjs
benches/: bench_nf.rs
src/: cone.rs  dag.rs  event.rs  kernel.rs  lib.rs  main.rs  merge.rs  network.rs  nf.rs  node.rs  persistence.rs
tests/: property_tests.proptest-regressions  property_tests.rs
